ensure hamburger menu is visible

--- a/src/app/shared/navbar/hamburger-bar/hamburger-bar.component.scss
+++ b/src/app/shared/navbar/hamburger-bar/hamburger-bar.component.scss
@@ -99,13 +99,15 @@ nav {
 }
 
 a.hamburger {
+    color: $primary-2;
     margin-right: 1em;
     display: flex;
     flex-direction: column;
     justify-content: center;
     cursor: pointer;
+    text-decoration: none;
     &:hover {
-        color: $primary-2;
+        color: $primary-1;
     }
     span {
         font-size: 1.4em;
